--- a/Report.Rmd
+++ b/Report.Rmd
@@ -36,7 +36,7 @@ bioassay=bind_cols(map_df(bioassay.read %>% select(uterus,weight,EE,ZM),~.x %>% 
 bioassay.fac=bioassay %>% mutate(EE=as.factor(EE),ZM=as.factor(ZM))
 ```
 
-```{r summary}
+```{r summary, echo=FALSE}
 ##1)We can consider `weight` and `uterus` as continuous variable. All other variables only have seperate values.
 summary(bioassay)
 bioassay %>% select(EE) %>% table()
@@ -66,7 +66,7 @@ I chose boxplot to illustrate the relationship between continuous variable (`ute
 
 I chose scatterplots with regression line to illustrate the relationship between two continuous variable (`uterus` and `weight`). Because the significant differece on `weight` between immature rats and adult rats, I use facet to represent different `protocol`. Notice the range for y-axis is different. We can see that: 1)For immature rats, `weight` seems do not effect the `uterus`. While for adult rats, the `uterus` decrease as the `weight` increase. There is significant interaction.
 
-```{r EDA}
+```{r EDA,echo=FALSE}
 ##---------------------boxplot
 ##different labs have diff mean on ZM. interaction on labs and protocol.
 ##when consider ZM as numeric, the diff is not sig in pic. but in factor - diff.
@@ -91,9 +91,36 @@ ggplot(data=bioassay.fac,mapping = aes(y = uterus,x = weight))+
 
 ### 3.2 Model
 
-I build a linear regression model with all variables except `group`. Apart from `weight` and `uterus`, I consider all other variables as factor. Also, I include the interaction between estrogen chemicals and different labs, protocols. Notice for the factors need to use a set of dummy variables to represent, so there are 218 predictors including the intercept.
+I build a linear regression model with all variables except `group`. Apart from `weight` and `uterus`, I consider all other variables as factor. Also, I include the interaction between estrogen chemicals and different labs along with protocols. Notice for the factors need to use a set of dummy variables to represent, so there are 218 predictors including the intercept.
 
-$Y=intercept+\beta_1EE+\beta_2ZM+\beta_3lab+\beta_4protocol+\beta_5weight+\beta_6EE:protocol+\beta_7ZM:protocol+\beta_8EE:lab+\beta_9ZM:lab+\epsilon$
+$Y=intercept+\beta_1EE+\beta_2ZM+\beta_3lab+\beta_4protocol+\beta_5weight+\beta_6EE:protocol+\beta_7ZM:protocol+\beta_8EE:lab+\beta_9ZM:lab+\epsilon$ 
+
+where $\epsilon \sim N(0,\sigma^2)$
+
+Notes:
+
+1. The value of `EE` and `ZM` is discrete. It is resonable to set it as factor. And compared to the model with numeric `EE` and `ZM`, the model I chose performed better in fitting the model(Ajusted R-square 0.9538; the model include numeric `EE` and `ZM` and quadradic form can only achieve 0.8286) and get the results as I expected from the boxplot.(`ZM:labs` is significant in F-test)
+
+2. The model does not include `group` for it does not pass the F-test. This make sense, which also prove that the study is replicable.
+
+3. Notice that each labs adopted different schemes for the study.(See the jitter plot) So interaction would be significant among all the variables (except for `group`). However, there are 19 labs and 8 different levels for `EE`. We need to be careful when include the interaction. I adopted the rule "keep the simplest model" and make sure that each variable and interaction I include in is super significant.(with p-value for F-test less than 2.2e-16).
+
+### 3.3 Methods
+
+I use MLE/OLS to estimate the parameters. I use F-test and t-test to settle down the problems we care about.
+
+
+
+
+Notes:
+
+1. The main problem of this dataset is too much factors and interactions leading to too much predictor. If adopted Bayesian methods, it would be time consuming.(There are some improvements--adding selection process in Appendix) So I adopted MLE/OLS for it is simple and fast.
+
+2. For overall test for discrete variable (factors), I adopted F-test. And for specific problem, I use t-test.(Sometimes need to construct t-test on my own.)
+
+### 3.4 Outliers and Influential points
+
+
 
 ```{r lm.full.fac.2}
 ##without 3 interaction--simple
